--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,9 @@
                         <label class="form-check-label" style="margin-left: 1.25rem;" for="user_custom">Use custom scheme</label>
                     </div>
                 </form>
-                <button onclick="login()" class="btn btn-primary btn-block">Log in</button>
-                <button onclick="loginWithFido2Step()" class="btn btn-primary btn-block">FIDO Log in(2Step)</button>
-                <button id="fidoLogin" onclick="loginWithFido()" class="btn btn-secondary btn-block">FIDO Log in(1st factor)</button>
+                <button id="fidoLogin" onclick="loginWithFido()" class="btn btn-secondary btn-block">FIDO Log in (1st factor)</button>
+                <button onclick="loginWithFido2Step()" class="btn btn-primary btn-block">FIDO Log in (2Step)</button>
+                <button onclick="login()" class="btn btn-primary btn-block">Password Log in</button>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
