--- a/public/top.html
+++ b/public/top.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -45,16 +46,24 @@
     <button class="close" data-dismiss="alert"><span>&times;</span></button>
     Welcome! You have signed up successfully.
 </div>
+
 <div class="container mt-4">
-    <h3>Registered FIDO2 Device</h3>
     <div id="challenge" class='mt-4'>
-        <div>
+        <h4 class="mt-3">FIDO2 operations</h4>
+        1. At first, let's register your new FIDO2 key
+
+        <div class="mt-1 mb-3">
+            <a class="btn btn-primary" href="register.html" role="button">Register new FIDO2 device</a>
+        </div>
+
+        2. Try authentication using your registered FIDO2 key
+        <div class="mt-1">
             <Button type="button" class="authentication btn btn-outline-success" onclick="location.href='auth.html'">
                 Authentication
             </Button>
-            <a class="btn btn-primary" href="register.html" role="button">Register new FIDO2 device</a>
         </div>
-        <dt>registered_keys</dt>
+        <hr>
+        <h4 class="mt-3">Registered FIDO2 keys</h4>
         <div id="card-container" class="card-columns mt-2">
             <p>Loading registered devices...</p>
         </div>
