--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,25 @@
 <body>
 <header class="navbar navbar-dark bg-info">
     <div class="container">
-        <a class="navbar-brand mr-0 mr-md-2" href="#" onclick="app.moveToRoot(); return false;">FIDO RP Demo</a>
+        <a class="navbar-brand mr-0 mr-md-2" href="#" onclick="app.moveToRoot(); return false;">Quado - FIDO RP Demo</a>
     </div>
 </header>
 
 
+<div class="jumbotron jumbotron-fluid bt-3">
+    <div class="container">
+        <h2>FIDO2 DEMO SITE</h2>
+        <p>FIDO server is powered by <a href="https://quado.io"> Quado</a>.</p>
+        <ul>
+            <li>You can try FIDO2 password-less experience.</li>
+            <li>Supported browsers: Chrome (69 or later), Firefox (61 or later), Edge (Windows 10 - 1809 version) browsers, and Android 7 or later.</li>
+            <li>Source code: <a target="_blank" href="https://github.com/quado-developer/quado-webauthn-express-sample">github repository</a></li>
+        </ul>
+
+
+    </div>
+
+</div>
 <div class="container">
     <div class="card devise-bs mx-auto mt-5" style="width:100%; max-width:32rem">
         <div class="card-header">
