--- a/public/top.html
+++ b/public/top.html
@@ -42,10 +42,6 @@
         </div>
     </div>
 </header>
-<div class=" text-center alert alert-dismissable alert-info">
-    <button class="close" data-dismiss="alert"><span>&times;</span></button>
-    Welcome! You have signed up successfully.
-</div>
 
 <div class="container mt-4">
     <div id="challenge" class='mt-4'>
@@ -56,7 +52,7 @@
             <a class="btn btn-primary" href="register.html" role="button">Register new FIDO2 device</a>
         </div>
 
-        2. Try authentication using your registered FIDO2 key
+        2. Try authentication using your registered key
         <div class="mt-1">
             <Button type="button" class="authentication btn btn-outline-success" onclick="location.href='auth.html'">
                 Authentication
